--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
    "ConnectionStrings": {
-     "DefaultConnection": "Server=localhost;Port=5432;Database=BookStore;User Id=postgres;Password=12345;"
+     "DefaultConnection": "Server=localhost;Port=5432;Database=BookStore;User Id=postgres;Password=admin;"
    }
 }
